se trabaja en estilos

--- a/index.html
+++ b/index.html
@@ -5,3 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clima App</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background: #e0f7fa;
+            margin: 0;
+        }
