--- a/index.html
+++ b/index.html
@@ -14,3 +14,10 @@
             background: #e0f7fa;
             margin: 0;
         }
+        .weather-container {
+            text-align: center;
+            padding: 20px;
+            background: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
