--- a/index.html
+++ b/index.html
@@ -25,3 +25,7 @@
             font-size: 2em;
             margin: 0;
         }
+        .weather-container p {
+            margin: 5px 0;
+        }
+    </style>
