se trabaja en estilos

--- a/index.html
+++ b/index.html
@@ -29,3 +29,11 @@
             margin: 5px 0;
         }
     </style>
+  </head>
+  <body>
+      <div class="weather-container">
+          <h1>Datos del Tiempo</h1>
+          <p id="city">Ciudad: Cargando...</p>
+          <p id="temperature">Temperatura: Cargando...</p>
+          <p id="description">Descripción: Cargando...</p>
+      </div>  
