se trabaja en script

--- a/index.html
+++ b/index.html
@@ -36,4 +36,7 @@
           <p id="city">Ciudad: Cargando...</p>
           <p id="temperature">Temperatura: Cargando...</p>
           <p id="description">Descripción: Cargando...</p>
-      </div>  
+      </div>
+      <script>
+        const apiKey = 'API';  // API key de OpenWeatherMap
+        const geoApiKey = 'YOUR_GEO_API_KEY';  // API key de ipinfo.io (opcional)  
