--- a/index.html
+++ b/index.html
@@ -40,3 +40,5 @@
       <script>
         const apiKey = 'API';  // API key de OpenWeatherMap
         const geoApiKey = 'YOUR_GEO_API_KEY';  // API key de ipinfo.io (opcional)  
+        async function getGeoLocation() {
+            try {
