--- a/index.html
+++ b/index.html
@@ -56,3 +56,8 @@
             try {
                 const response = await fetch(`https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${apiKey}&units=metric`);
                 const data = await response.json();
+                document.getElementById('city').innerText = `Ciudad: ${data.name}`;
+                document.getElementById('temperature').innerText = `Temperatura: ${data.main.temp} °C`;
+                document.getElementById('description').innerText = `Descripción: ${data.weather[0].description}`;
+            } catch (error) {
+                
